strength meter refactor

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -73,8 +73,8 @@
           <div class="strength-meter">
             <h3>MEDIUM</h3>
             <div>
-              <div id="first-bar" class="too-weak"></div>
-              <div id="second-bar" class="weak"></div>
+              <div id="first-bar" class="medium"></div>
+              <div id="second-bar" class="medium"></div>
               <div id="third-bar" class="medium"></div>
               <div id="fourth-bar"></div>
             </div>
