--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -26,7 +26,7 @@
       </div>
       <div class="filters-container">
         <div class="character-length">
-          <p>Character length</p>
+          <p>Password length</p>
           <span id="value"></span>
           <input type="range" min="1" max="20" value="10" class="slider" id="myRange" />
         </div>
