--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -72,7 +72,7 @@
           </div>
           <div class="strength-meter">
             <h3>MEDIUM</h3>
-            <div>
+            <div class="strength-bars">
               <div id="first-bar" class="medium"></div>
               <div id="second-bar" class="medium"></div>
               <div id="third-bar" class="medium"></div>
