--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="main-container">
-    <h1>Password Generator</h1>
+    <h2>Password Generator</h2>
     <div class="data-container">
       <div class="input-container">
         <lable for="password"></lable>
@@ -26,7 +26,7 @@
       </div>
       <div class="filters-container">
         <div class="character-length">
-          <p>Character length</p>
+          <p>Password length</p>
           <span id="value"></span>
           <input type="range" min="1" max="20" value="10" class="slider" id="myRange" />
         </div>
@@ -71,10 +71,10 @@
             <h3>STRENGTH</h3>
           </div>
           <div class="strength-meter">
-            <h3>MEDIUM</h3>
-            <div>
-              <div id="first-bar" class="too-weak"></div>
-              <div id="second-bar" class="weak"></div>
+            <h3></h3>
+            <div class="strength-bars">
+              <div id="first-bar" class="medium"></div>
+              <div id="second-bar" class="medium"></div>
               <div id="third-bar" class="medium"></div>
               <div id="fourth-bar"></div>
             </div>
